[tool.poetry]
name = "linkml-store"
version = "0.0.0"
description = "linkml-store"
authors = ["Author 1 <author@org.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, !=3.9.7"
click = "*"
pydantic = "^2.0.0"
linkml-runtime = "^1.7.5"
streamlit = { version = "^1.32.2", optional = true }
sqlalchemy = "*"
duckdb = "^0.10.1"
duckdb-engine = ">=0.11.2"
matplotlib = { version = "*", optional = true }
seaborn = { version = "*", optional = true }
plotly = { version = "*", optional = true }
pystow = "^0.5.4"
black = { version=">=24.0.0", optional = true }
llm = { version="*", optional = true }
pymongo = { version="*", optional = true }
chromadb = { version="*", optional = true }
h5py = { version="*", optional = true }
linkml = { version="*", optional = true }
linkml_map = { version="*", optional = true }
pandas = ">=2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=7.1.2"}
tox = {version = ">=3.25.1"}
pre-commit = {version = ">=3.3.3"}
sphinx = {version = ">=6.1.3"}
sphinx-rtd-theme = {version = ">=1.0.0"}
sphinx-autodoc-typehints = {version = "<2.0.0"}
sphinx-click = {version = ">=4.3.0"}
myst-parser = {version = ">=0.18.1"}
furo = {version = "*"}
nbsphinx = "*"
jupyter = "*"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
pytest-subtests = "^0.11.0"
numpy = [
  { "version" = ">=1.24.3", "python" = "<3.12" },
  { "version" = ">=1.25.2", "python" = ">=3.12" }
]

[tool.poetry.extras]
analytics = ["pandas", "matplotlib", "seaborn", "plotly"]
app = ["streamlit"]
tests = ["black"]
llm = ["llm"]
mongodb = ["pymongo"]
chromadb = ["chromadb"]
h5py = ["h5py"]
validation = ["linkml"]
map = ["linkml_map"]

[tool.poetry.scripts]
linkml-store = "linkml_store.cli:cli"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
force-exclude = '''
/(
  # default exclude
  \.direnv|\.eggs|\.git|\.hg|\.ipynb_checkpoints|\.mypy_cache|\.nox|\.pytest_cache|\.ruff_cache|\.tox|\.svn|\.venv|\.vscode|__pypackages__|_build|buck-out|build|dist|venv
  # additional exclude
  | tests.*/output
  | __snapshots__
  | docs
  | examples
  | notebooks
)/
'''

[tool.ruff]
extend-exclude = [
    "tests/output",
    "tests/**/output",
    "tests/**/__snapshots__",
    "examples/",
    "docs/",
    "notebooks/"
]
force-exclude = true
line-length = 120
extend-ignore = ["E203"]
select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
]
# Assume Python 3.8
target-version = "py38"

[tool.ruff.per-file-ignores]
# These templates can have long lines
"linkml/generators/sqlalchemy/sqlalchemy_declarative_template.py" = ["E501"]
"linkml/generators/sqlalchemy/sqlalchemy_imperative_template.py" = ["E501"]

# Notebooks can have unsorted imports
"tests/test_notebooks/input/*" = ["E402"]


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.codespell]
# TODO: bring in tests in too
skip = '.git,*.pdf,*.svg,./tests,pyproject.toml,*.dill,poetry.lock,*.ipynb'
# Ignore table where words could be split across rows
# Ignore shortcut specifications like [Ff]alse
ignore-regex = '(\|.*\|.*\|.*\||\[[A-Z][a-z]\][a-z][a-z])'
ignore-words-list = 'mater,connexion,infarction'
count = ""
quiet-level = 3

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
