[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "linkml-store"
description = "linkml-store"
authors = [
  {name = "Author 1", email = "author@org.org"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

dependencies = [
  "click",
  "pydantic>=2.0.0",
  "linkml-runtime>=1.8.0",
  "sqlalchemy",
  "google-cloud-bigquery",
  "duckdb>=0.10.1",
  "duckdb-engine>=0.11.2",
  "pystow>=0.5.4",
  "pymongo>=4.11",
  "multipledispatch",
  "tabulate",
  "pandas>=2.2.1",
  "jinja2>=3.1.4",
  "jsonlines>=4.0.0",
  "xmltodict>=0.13.0",
  "jsonpatch>=1.33",
  "jsonpath-ng",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
analytics = ["pandas", "matplotlib", "seaborn", "plotly"]
app = ["streamlit>=1.32.2"]
tests = ["black>=24.0.0", "ruff>=0.6.2"]
llm = ["llm", "tiktoken"]
mongodb = ["pymongo"]
neo4j = ["neo4j", "py2neo", "networkx"]
h5py = ["h5py"]
pyarrow = ["pyarrow"]
dremio = ["pyarrow"]
pyreadr = ["pyreadr"]
validation = ["linkml>=1.8.0"]
map = ["linkml_map>=0.3.9", "ucumvert>=0.2.0"]
renderer = ["linkml_renderer"]
fastapi = ["fastapi", "uvicorn"]
frictionless = ["frictionless"]
scipy = ["scipy", "scikit-learn"]
rdf = ["lightrdf"]
ibis = ["ibis-framework[duckdb,examples]>=9.3.0", "multipledispatch", "gcsfs"]
bigquery = ["google-cloud-bigquery"]
all = [
  "llm",
  "tiktoken",
  "neo4j",
  "py2neo",
  "networkx",
  "linkml>=1.8.0",
  "linkml_map",
  "linkml_renderer",
  "google-cloud-bigquery",
]

[dependency-groups]
dev = [
  "pytest>=7.1.2",
  "pytest-subtests>=0.11.0",
  "tox>=3.25.1",
  "pre-commit>=3.3.3",
  "sphinx>=6.1.3",
  "sphinx-rtd-theme>=1.0.0",
  "sphinx-autodoc-typehints<2.0.0",
  "sphinx-click>=4.3.0",
  "sphinx-automodapi",
  "myst-parser>=0.18.1",
  "furo",
  "nbsphinx",
  "jupyter",
  "jupysql",
  "papermill",
  "nbdime",
  "codespell>=2.3.0",
  "tomli>=2.0.1",
  "black>=24.0.0",
  "ruff>=0.6.2",
  "mypy>=1.0.0",
]

tests = [
  "pytest>=7.4.0",
  "pytest-subtests>=0.11.0",
  "numpy>=1.24.3; python_version < '3.12'",
  "numpy>=1.25.2; python_version >= '3.12'",
]

[project.scripts]
linkml-store = "linkml_store.cli:cli"
linkml-store-api = "linkml_store.webapi.main:start"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
force-exclude = '''
/(
  # default exclude
  \.direnv|\.eggs|\.git|\.hg|\.ipynb_checkpoints|\.mypy_cache|\.nox|\.pytest_cache|\.ruff_cache|\.tox|\.svn|\.venv|\.vscode|__pypackages__|_build|buck-out|build|dist|venv
  # additional exclude
  | tests.*/output
  | __snapshots__
  | docs
  | examples
  | notebooks
)/
'''

[tool.ruff]
extend-exclude = [
    "tests/output",
    "tests/**/output",
    "tests/**/__snapshots__",
    "examples/",
    "docs/",
    "notebooks/"
]
force-exclude = true
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E203"]
select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,./tests,pyproject.toml,*.dill,uv.lock,*.ipynb,./docs/how-to/input,./docs/how-to/output,./docs/_build,./tmp,eccode.json'
ignore-regex = '(\|.*\|.*\|.*\||\[[A-Z][a-z]\][a-z][a-z])'
ignore-words-list = 'mater,connexion,infarction,nin,STING,importin'
count = ""
quiet-level = 3
